<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stream Era</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="setting_title">Server Setting</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="connecting">connecting…</string>
    <string name="version">version</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_ip_adress">IP address:</string>
    <string name="lbl_port">Port:</string>
    <string name="lbl_location">Location: </string>
    <string name="lbl_serverIp">Server ip</string>
    <string name="lbl_serverPort">Server port</string>
    <string name="txt_status_Error">Error</string>
    <string name="txt_status_Connected">Connected!</string>
    <string name="txt_status_Connecting">connecting...</string>

    <string name="lbl_Name">Name</string>
    <string name="lbl_Id">Id</string>
    <string name="coming_soon">Soon!</string>
    
    <string name="action_greyscale">Greyscale</string>
    <string name="action_sepia">Sepia</string>
    <string name="action_blur">Blur</string>
    <string name="action_binary">Binary</string>
    <string name="action_default">Default</string>
</resources>
