<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="5dp">

    <ImageView
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:id="@+id/imageView"
        android:src="@drawable/preview"
        android:alpha="0.3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/coming_soon"
        android:id="@+id/lbl_comingSoon"
        android:layout_gravity="center_vertical|left"
        android:rotation="-45"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="60dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_Name"
                android:id="@+id/lbl_name"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_Id"
                android:id="@+id/lbl_id"
                android:singleLine="true"
                android:paddingRight="10dp"
                android:paddingLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_nameEnter"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/accent_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lbl_idEnter"
                android:singleLine="true"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/accent_material_light" />
        </TableRow>
    </TableLayout>


</FrameLayout>